--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Kaushan+Script:400);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i);
 
 
@@ -20,14 +21,14 @@ body {
   line-height: 1.6;
 }
 .display-1 {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Kaushan Script', handwriting;
   font-size: 4.25rem;
 }
 .display-1 > .mbr-iconfont {
   font-size: 6.8rem;
 }
 .display-2 {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Kaushan Script', handwriting;
   font-size: 3rem;
 }
 .display-2 > .mbr-iconfont {
@@ -1373,7 +1374,7 @@ body {
   display: none;
 }
 .cid-qTkA127IK8 {
-  background-image: url("../../../assets/images/democrat-donkey-2000x1950-2000x1950.png");
+  background-image: url("../../../assets/images/democrat-donkey-2000x1950-2-2000x1950.png");
 }
 .cid-qTkA127IK8 H3 {
   color: #073b4c;
@@ -1400,7 +1401,7 @@ body {
 .cid-qTkAaeaxX5 {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #767676;
+  background-color: #ffffff;
 }
 @media (max-width: 767px) {
   .cid-qTkAaeaxX5 .content {
