--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1390,13 +1390,51 @@ body {
 .cid-qWAQLagET5 .mbr-section-subtitle {
   color: #767676;
 }
+.cid-qWPNemuAMz {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-qWPNemuAMz .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 992px) {
+  .cid-qWPNemuAMz .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-qWPNemuAMz .mbr-text {
+  color: #767676;
+}
 .cid-qWAQMHCJC8 {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #ffffff;
 }
 .cid-qWAQMHCJC8 .mbr-text {
   color: #767676;
+}
+.cid-qWPOYLahTx {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #f9f9f9;
+}
+.cid-qWPOYLahTx h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-qWPOYLahTx p {
+  color: #767676;
+  text-align: left;
+}
+.cid-qWPOYLahTx .card-box {
+  padding-top: 2rem;
+}
+.cid-qWPOYLahTx .card-wrapper {
+  height: 100%;
 }
 .cid-qTkAaeaxX5 {
   padding-top: 60px;
