--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1416,6 +1416,57 @@ body {
 .cid-qWAQMHCJC8 .mbr-text {
   color: #767676;
 }
+.cid-qWQik2MhW0 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-qWQik2MhW0 .mbr-figure {
+    padding-left: 4rem;
+  }
+}
+@media (max-width: 992px) {
+  .cid-qWQik2MhW0 .mbr-figure {
+    padding-top: 1rem;
+  }
+}
+.cid-qWQik2MhW0 .mbr-text {
+  color: #767676;
+}
+.cid-qWQiehhdCy {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-qWQiehhdCy .counter-container {
+  color: #767676;
+}
+.cid-qWQiehhdCy .counter-container ul {
+  margin-bottom: 0;
+}
+.cid-qWQiehhdCy .counter-container ul li {
+  margin-bottom: 1rem;
+  list-style: none;
+}
+.cid-qWQiehhdCy .counter-container ul li:before {
+  position: absolute;
+  left: 0px;
+  margin-top: -10px;
+  padding-top: 3px;
+  content: '';
+  display: inline-block;
+  text-align: center;
+  margin: 5px 10px;
+  line-height: 20px;
+  transition: all .2s;
+  color: #ffffff;
+  background: #149dcc;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  content: '✓';
+}
 .cid-qWPOYLahTx {
   padding-top: 30px;
   padding-bottom: 30px;
