--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1390,26 +1390,25 @@ body {
 .cid-qWAQLagET5 .mbr-section-subtitle {
   color: #232323;
 }
-.cid-qWPNemuAMz {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #ffffff;
+.cid-qWWAZPl9lQ {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #f9f9f9;
 }
-@media (min-width: 992px) {
-  .cid-qWPNemuAMz .mbr-figure {
-    padding-right: 4rem;
-  }
+.cid-qWWAZPl9lQ h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
 }
-@media (max-width: 992px) {
-  .cid-qWPNemuAMz .mbr-figure {
-    padding-bottom: 1rem;
-  }
-}
-.cid-qWPNemuAMz .mbr-text {
+.cid-qWWAZPl9lQ p {
   color: #767676;
+  text-align: left;
 }
-.cid-qWPNemuAMz .mbr-text B {
-  color: #232323;
+.cid-qWWAZPl9lQ .card-box {
+  padding-top: 2rem;
+}
+.cid-qWWAZPl9lQ .card-wrapper {
+  height: 100%;
 }
 .cid-qWAQMHCJC8 {
   padding-top: 30px;
@@ -1426,7 +1425,7 @@ body {
   color: #232323;
 }
 .cid-qWQik2MhW0 {
-  padding-top: 30px;
+  padding-top: 15px;
   padding-bottom: 15px;
   background-color: #ffffff;
 }
@@ -1484,7 +1483,7 @@ body {
   color: #232323;
 }
 .cid-qWR6KaIFjq {
-  padding-top: 30px;
+  padding-top: 0px;
   padding-bottom: 30px;
   background-color: #f9f9f9;
 }
@@ -1507,8 +1506,8 @@ body {
   color: #232323;
 }
 .cid-qWRgQhEWHs {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 0px;
+  padding-bottom: 15px;
   background: #ffffff;
 }
 .cid-qWRgQhEWHs .image-block {
