--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1391,8 +1391,8 @@ body {
   color: #232323;
 }
 .cid-qWWIPFijKY {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: #f9f9f9;
 }
 .cid-qWWIPFijKY h4 {
@@ -1409,6 +1409,27 @@ body {
 }
 .cid-qWWIPFijKY .card-wrapper {
   height: 100%;
+}
+.cid-qWXjH1Vrle {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background: #ffffff;
+}
+.cid-qWXjH1Vrle .image-block {
+  margin: auto;
+}
+.cid-qWXjH1Vrle figcaption {
+  position: relative;
+}
+.cid-qWXjH1Vrle figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qWXjH1Vrle .image-block {
+    width: 100% !important;
+  }
 }
 .cid-qWAQMHCJC8 {
   padding-top: 30px;
