--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1635,6 +1635,46 @@ body {
   padding-bottom: 30px;
   background-color: #ffffff;
 }
+.cid-qXvHlA2w27 {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-qXvHlA2w27 .mbr-text,
+.cid-qXvHlA2w27 blockquote {
+  color: #767676;
+}
+.cid-qXvHlA2w27 .mbr-text B {
+  color: #232323;
+}
+.cid-qXvHlA2w27 .mbr-text {
+  text-align: center;
+}
+.cid-qXvFgFlesS {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background: #ffffff;
+}
+.cid-qXvFgFlesS .video-block {
+  margin: auto;
+}
+@media (max-width: 768px) {
+  .cid-qXvFgFlesS .video-block {
+    width: 100% !important;
+  }
+}
+.cid-qXvFlQxrr9 {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-qXvFlQxrr9 .mbr-text,
+.cid-qXvFlQxrr9 blockquote {
+  color: #767676;
+}
+.cid-qXvFlQxrr9 .mbr-text {
+  color: #232323;
+}
 .cid-qXq0ldqr57 {
   padding-top: 30px;
   padding-bottom: 0px;
@@ -1650,7 +1690,7 @@ body {
 }
 .cid-qXq0dedxW4 {
   padding-top: 0px;
-  padding-bottom: 30px;
+  padding-bottom: 15px;
   background-color: #f9f9f9;
 }
 .cid-qXq0dedxW4 h4 {
@@ -1669,6 +1709,66 @@ body {
   height: 100%;
 }
 .cid-qXq0dedxW4 .card-title {
+  color: #232323;
+}
+.cid-qXvFaCnlCf {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-qXvFaCnlCf .mbr-text,
+.cid-qXvFaCnlCf blockquote {
+  color: #767676;
+}
+.cid-qXvFaCnlCf .mbr-text B {
+  color: #232323;
+}
+.cid-qXvFaCnlCf .mbr-text {
+  text-align: center;
+}
+.cid-qXvLz4jUD0 {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background: #ffffff;
+}
+.cid-qXvLz4jUD0 .image-block {
+  margin: auto;
+}
+.cid-qXvLz4jUD0 figcaption {
+  position: relative;
+}
+.cid-qXvLz4jUD0 figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qXvLz4jUD0 .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qXvLCt4nH4 {
+  padding-top: 15px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-qXvLCt4nH4 .mbr-text,
+.cid-qXvLCt4nH4 blockquote {
+  color: #767676;
+}
+.cid-qXvLCt4nH4 .mbr-text P {
+  color: #232323;
+}
+.cid-qXvNxfpSyg {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-qXvNxfpSyg .mbr-text,
+.cid-qXvNxfpSyg blockquote {
+  color: #767676;
+}
+.cid-qXvNxfpSyg .mbr-text B {
   color: #232323;
 }
 .cid-qWRgQhEWHs {
