--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1602,6 +1602,59 @@ body {
 .cid-qWQiehhdCy .mbr-text UL {
   color: #232323;
 }
+.cid-qXOviWq2le {
+  padding-top: 15px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-qXOviWq2le .mbr-text,
+.cid-qXOviWq2le blockquote {
+  color: #767676;
+}
+.cid-qXOviWq2le .mbr-text B {
+  color: #232323;
+}
+.cid-qXOvf3ZdI6 {
+  padding-top: 0px;
+  padding-bottom: 15px;
+  background-color: #efefef;
+}
+.cid-qXOvf3ZdI6 .card-box {
+  padding: 0 2rem;
+}
+.cid-qXOvf3ZdI6 .mbr-section-btn {
+  padding-top: 1rem;
+}
+.cid-qXOvf3ZdI6 .mbr-section-btn a {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.cid-qXOvf3ZdI6 h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-qXOvf3ZdI6 p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+  padding-top: 2rem;
+}
+.cid-qXOvf3ZdI6 .mbr-text {
+  color: #767676;
+}
+.cid-qXOvf3ZdI6 .card-wrapper {
+  height: 100%;
+  padding-bottom: 2rem;
+  background: #ffffff;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-qXOvf3ZdI6 .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
 .cid-qXv9B4f4k6 {
   padding-top: 30px;
   padding-bottom: 15px;
