--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1375,12 +1375,12 @@ body {
 }
 .cid-qTkzRZLJNu .navbar {
   padding: .5rem 0;
-  background: #efefef;
+  background: #ffffff;
   transition: none;
   min-height: 77px;
 }
 .cid-qTkzRZLJNu .navbar-dropdown.bg-color.transparent.opened {
-  background: #efefef;
+  background: #ffffff;
 }
 .cid-qTkzRZLJNu a {
   font-style: normal;
@@ -1464,7 +1464,7 @@ body {
   padding-bottom: 0;
 }
 .cid-qTkzRZLJNu .dropdown .dropdown-menu {
-  background: #efefef;
+  background: #ffffff;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -2499,12 +2499,12 @@ body {
 }
 .cid-r29Ub5rPK3 .navbar {
   padding: .5rem 0;
-  background: #efefef;
+  background: #ffffff;
   transition: none;
   min-height: 77px;
 }
 .cid-r29Ub5rPK3 .navbar-dropdown.bg-color.transparent.opened {
-  background: #efefef;
+  background: #ffffff;
 }
 .cid-r29Ub5rPK3 a {
   font-style: normal;
@@ -2588,7 +2588,7 @@ body {
   padding-bottom: 0;
 }
 .cid-r29Ub5rPK3 .dropdown .dropdown-menu {
-  background: #efefef;
+  background: #ffffff;
   display: none;
   position: absolute;
   min-width: 5rem;
