--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1802,6 +1802,74 @@ body {
 .cid-r2MTXYCMkU .mbr-text P {
   color: #232323;
 }
+.cid-r5Qs45raN6 {
+  padding-top: 15px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-r5Qs45raN6 .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-r5QrU3YEnJ {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-r5QrU3YEnJ .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-r5QrU3YEnJ .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-r5QrU3YEnJ .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-r5QrU3YEnJ .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-r5QrU3YEnJ .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #554346;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+}
+.cid-r5QrU3YEnJ .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-r5QrU3YEnJ .mbr-gallery-item > div:hover:before {
+  opacity: 0.7 !important;
+}
+.cid-r5QrU3YEnJ .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-r5QrU3YEnJ .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #554346 !important;
+  opacity: 0.7;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+}
 .cid-r0k7yxM9uf {
   padding-top: 15px;
   padding-bottom: 0px;
@@ -2543,12 +2611,12 @@ body {
 }
 .cid-r29Ub5rPK3 .navbar {
   padding: .5rem 0;
-  background: #efefef;
+  background: #ffffff;
   transition: none;
   min-height: 77px;
 }
 .cid-r29Ub5rPK3 .navbar-dropdown.bg-color.transparent.opened {
-  background: #efefef;
+  background: #ffffff;
 }
 .cid-r29Ub5rPK3 a {
   font-style: normal;
@@ -2632,7 +2700,7 @@ body {
   padding-bottom: 0;
 }
 .cid-r29Ub5rPK3 .dropdown .dropdown-menu {
-  background: #efefef;
+  background: #ffffff;
   display: none;
   position: absolute;
   min-width: 5rem;
